Add delete employee route
